<resources>
    <string name="app_name">Vistara World</string>
    <string name="icon_drawer">icon_drawer</string>
    <string name="icon_bell">icon_bell</string>
    <string name="icon_chat">icon_chat</string>
    <string name="vistara_world">VISTARA WORLD</string>
    <string name="one_platform_for_your_all_travel">One Platform for your all travel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="club_vistara">Club Vistara</string>
    <string name="cv_mall">CV Mall</string>
    <string name="hotel">Hotel</string>
    <string name="cabs">Cabs</string>
    <string name="play">Play</string>
    <string name="slider">slider</string>
    <string name="icon_play">icon_play</string>
    <string name="thumbnail">thumbnail</string>
    <string name="club_vistara_">Club Vistara</string>
    <string name="cv_mall_">CV Mall</string>
    <string name="hotel_">Hotel</string>
    <string name="cabs_">Cabs</string>
    <string name="home_">Home</string>
</resources>