<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/custom_bottom_nav_item.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/nav_play"
        android:layout_width="@dimen/d0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/d10"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/d24"
            android:layout_height="@dimen/d24"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d4"
            android:src="@drawable/icon_play"
            android:contentDescription="@string/icon_play"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_"
            android:textSize="@dimen/s12"
            android:layout_marginTop="@dimen/d4"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_cabs"
        android:layout_width="@dimen/d0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/d10"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/d24"
            android:layout_height="@dimen/d24"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d4"
            android:src="@drawable/icon_cab"
            android:contentDescription="@string/cabs"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabs_"
            android:textSize="@dimen/s12"
            android:layout_marginTop="@dimen/d4"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_hotel"
        android:layout_width="@dimen/d0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/d10"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/d24"
            android:layout_height="@dimen/d24"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d4"
            android:src="@drawable/icon_hotel"
            android:contentDescription="@string/hotel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_"
            android:textSize="@dimen/s12"
            android:layout_marginTop="@dimen/d4"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_cv_mall"
        android:layout_width="@dimen/d0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/d10"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/d24"
            android:layout_height="@dimen/d24"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d4"
            android:src="@drawable/icon_cv_mall"
            android:contentDescription="@string/cv_mall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv_mall_"
            android:textSize="@dimen/s12"
            android:layout_marginTop="@dimen/d4"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_club_vistara"
        android:layout_width="@dimen/d0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/d5"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/d24"
            android:layout_height="@dimen/d24"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d4"
            android:src="@drawable/icon_club_vistara"
            android:contentDescription="@string/club_vistara"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/club_vistara_"
            android:textSize="@dimen/s11"
            android:gravity="center"
            android:layout_marginTop="@dimen/d4"
            android:layout_marginBottom="@dimen/d5"
            android:textColor="@color/black" />

    </LinearLayout>





</LinearLayout>
